--- a/.github/workflows/1_1-package-code-check.yml
+++ b/.github/workflows/1_1-package-code-check.yml
@@ -18,10 +18,10 @@ jobs:
         if [ -f dev_requirements.txt ]; then pip install -r dev_requirements.txt; fi
     - name: Lint with flake8
       run: |
-        flake8 --filename=./src/complexoperations/*.py --count --statistics
-        flake8 --filename=./src/complexoperations/*.py --count --statistics --exit-zero --max-complexity=10 --max-line-length=127
-        flake8 --filename=./test/complexoperations/*.py --count --statistics
-        flake8 --filename=./test/complexoperations/*.py --count --statistics --exit-zero --max-complexity=10 --max-line-length=127
+        flake8 --filename=./src/./*.py --count --statistics
+        flake8 --filename=./src/./*.py --count --statistics --exit-zero --max-complexity=10 --max-line-length=127
+        flake8 --filename=./test/./*.py --count --statistics
+        flake8 --filename=./test/./*.py --count --statistics --exit-zero --max-complexity=10 --max-line-length=127
     - name: Test with pytest
       run: |
-        pytest test/complexoperations
+        pytest test/.
