--- a/.github/workflows/3_1-api-code-check.yml
+++ b/.github/workflows/3_1-api-code-check.yml
@@ -19,13 +19,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f dev_requirements.txt ]; then pip install -r dev_requirements.txt; fi
-        pip install -r src/apicomplexoperations/requirements.txt
+        pip install -r src/api./requirements.txt
     - name: Lint with flake8
       run: |
-        flake8 --filename=./src/apicomplexoperations/*.py --count --statistics --ignore E402
-        flake8 --filename=./src/apicomplexoperations/*.py --count --statistics --exit-zero --max-complexity=10 --max-line-length=127 --ignore E402
-        flake8 --filename=./test/apicomplexoperations/*.py --count --statistics
-        flake8 --filename=./test/apicomplexoperations/*.py --count --statistics --exit-zero --max-complexity=10 --max-line-length=127
+        flake8 --filename=./src/api./*.py --count --statistics --ignore E402
+        flake8 --filename=./src/api./*.py --count --statistics --exit-zero --max-complexity=10 --max-line-length=127 --ignore E402
+        flake8 --filename=./test/api./*.py --count --statistics
+        flake8 --filename=./test/api./*.py --count --statistics --exit-zero --max-complexity=10 --max-line-length=127
     - name: Test with pytest
       run: |
-        pytest test/apicomplexoperations 
+        pytest test/api. 
