--- a/.github/workflows/1_1-package-code-check.yml
+++ b/.github/workflows/1_1-package-code-check.yml
@@ -24,4 +24,4 @@ jobs:
         flake8 --filename=./test/./*.py --count --statistics --exit-zero --max-complexity=10 --max-line-length=127
     - name: Test with pytest
       run: |
-        pytest test/.
+        pytest test/
