--- a/.github/workflows/1_1-package-code-check.yml
+++ b/.github/workflows/1_1-package-code-check.yml
@@ -20,8 +20,8 @@ jobs:
       run: |
         flake8 --filename=./src/./*.py --count --statistics
         flake8 --filename=./src/./*.py --count --statistics --exit-zero --max-complexity=10 --max-line-length=127
-        flake8 --filename=./test/./*.py --count --statistics
-        flake8 --filename=./test/./*.py --count --statistics --exit-zero --max-complexity=10 --max-line-length=127
+        flake8 --filename=./test/*.py --count --statistics
+        flake8 --filename=./test/*.py --count --statistics --exit-zero --max-complexity=10 --max-line-length=127
     - name: Test with pytest
       run: |
         pytest test/
