alterado alguns parametros de test, caminho

--- a/.github/workflows/3_0-api-ci.yml
+++ b/.github/workflows/3_0-api-ci.yml
@@ -3,7 +3,7 @@ name: FastAPI CI
 on:
   push:
     branches: [ "main", "develop", "feature/*" ]
-    paths: ['src/api./**', 'test/api./**']
+    paths: ['src/api./**', 'test/**']
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
