--- a/.github/workflows/3_1-api-code-check.yml
+++ b/.github/workflows/3_1-api-code-check.yml
@@ -24,8 +24,8 @@ jobs:
       run: |
         flake8 --filename=./src/api./*.py --count --statistics --ignore E402
         flake8 --filename=./src/api./*.py --count --statistics --exit-zero --max-complexity=10 --max-line-length=127 --ignore E402
-        flake8 --filename=./test/api./*.py --count --statistics
-        flake8 --filename=./test/api./*.py --count --statistics --exit-zero --max-complexity=10 --max-line-length=127
+        flake8 --filename=./test/*.py --count --statistics
+        flake8 --filename=./test/*.py --count --statistics --exit-zero --max-complexity=10 --max-line-length=127
     - name: Test with pytest
       run: |
-        pytest test/api. 
+        pytest test/ 
